--- a/jasmine/jasmine-standalone-3.8.0/src/index.css
+++ b/jasmine/jasmine-standalone-3.8.0/src/index.css
@@ -1,24 +1,26 @@
 
 body {
     margin: 0;
+    padding: 0;
     background-color: wheat;
 }
 
 main {
-    margin: auto;
+    margin: 0 auto;
 }
 
 #heading {
     text-align: center;
     font-family: Georgia, 'Times New Roman', Times, serif;
-    text-shadow: black;
+    text-shadow: navy;
     font-style: italic;
 }
 
 #connections-form {
     display: block;
-    background-color: aqua;
+    background-color: slateblue;
     margin: 0 10px 20px 10px;
+    padding: 45px 0;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
     border-radius: 5px;
@@ -35,7 +37,7 @@ input {
     margin-top: 10px;
     margin-left: 5px;
     padding: 5px;
-    width: 50%;
+    width: 60%;
     border: 2px solid yellow;
     border-radius: 10px;
     opacity: 85%;
@@ -54,6 +56,7 @@ input:hover {
     text-decoration: none;
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-weight: bolder;
+    color: navy;
 }
 
 .save-btn:hover {
