Add a remove function for removing specific connection from db

--- a/jasmine/jasmine-standalone-3.8.0/src/index.css
+++ b/jasmine/jasmine-standalone-3.8.0/src/index.css
@@ -85,3 +85,17 @@ input:hover {
     background-color: yellow;
     color: slateblue;
 }
+
+.connections-list {
+    list-style-type: none;
+    background: greenyellow;
+}
+
+li {
+    border-bottom: 1px solid whitesmoke;
+}
+
+li:last-child {
+    border: none;
+}
+
