--- a/jasmine/jasmine-standalone-3.8.0/src/index.css
+++ b/jasmine/jasmine-standalone-3.8.0/src/index.css
@@ -3,6 +3,7 @@ body {
     margin: 0;
     padding: 0;
     background-color: wheat;
+    font-family: 'Courgette', cursive, 'Open Sans', sans-serif, 'Roboto', sans-serif;
 }
 
 main {
@@ -11,23 +12,22 @@ main {
 
 #heading {
     text-align: center;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    text-shadow: navy;
-    font-style: italic;
+    text-shadow: #000;
+    font-size: 30px;
 }
 
 #connections-form {
     display: block;
     background-color: slateblue;
+    opacity: 0.9;
     margin: 0 10px 20px 10px;
-    padding: 45px 0;
+    padding: 55px 0;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
     border-radius: 5px;
     text-align: center;
 }
 label {
-    font-family: Georgia, 'Times New Roman', Times, serif;
     font-weight: bolder;
     font-size: 15px;
 }
@@ -38,7 +38,7 @@ input {
     margin-left: 5px;
     padding: 5px;
     width: 60%;
-    border: 2px solid yellow;
+    border: 2px solid wheat;
     border-radius: 10px;
     opacity: 85%;
 }
@@ -53,8 +53,7 @@ input:hover {
     padding: 5px 15px;
     border-radius: 10px;
     text-decoration: none;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    font-weight: bolder;
+    font-weight: bold;
     cursor: pointer;
 }
 
@@ -64,7 +63,7 @@ input:hover {
 }
 
 .save-btn {
-    background-color: yellow;
+    background-color: wheat;
     color: slateblue;
 }
 
@@ -76,7 +75,7 @@ input:hover {
 
 .remove-btn {
     background-color: slateblue;
-    color: yellow;
+    color: wheat;
     display: none;
 }
 
@@ -88,14 +87,36 @@ input:hover {
 
 .connections-list {
     list-style-type: none;
-    background: greenyellow;
+    padding: 10px 0;
+    background: whitesmoke;
 }
 
-li {
-    border-bottom: 1px solid whitesmoke;
+.connection-card {
+    margin: 10px auto;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    padding: 25px 35px;
+    width: 600px;
+    background: #fff;
+    display: block;
+    justify-content: center;
+    align-items: center;
+    border-radius: 5%;
 }
 
-li:last-child {
-    border: none;
+.connection-card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+    opacity: 0.7;
+}
+
+
+button {
+    cursor: pointer;
+    background: crimson;
+    opacity: 0.7;
+    color: #000;
+    font-weight: bolder;
+    font-style: oblique;
+    border-radius: 40%;
 }
 
