--- a/src/index.css
+++ b/src/index.css
@@ -30,7 +30,9 @@ input:focus {
     background: wheat;
 }
 
-.input-error {
+.name-input-error,
+.email-input-error,
+.phone-input-error {
     display: none;
     border: 2px solid red;
 }
