--- a/src/index.css
+++ b/src/index.css
@@ -34,7 +34,7 @@ input:focus {
 .email-input-error,
 .phone-input-error {
     display: none;
-    border: 2px solid red;
+    border: 2px solid crimson;
     margin-bottom: auto;
     max-width: 100%;
 }
